# habitflow

./: .gitignore  PRD-habitflow.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 58ba933f6333_initial_schema.py  8ef86d9478fc_add_achievements_table_v3.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/dependencies/: auth.py  timezone.py
backend/app/models/: achievement.py  habit.py  progress.py  session.py  user.py
backend/app/routers/: achievements.py  auth.py  habits.py  progress.py  websocket.py
backend/app/schemas/: habit.py  progress.py  token.py  user.py
backend/app/services/: auth_service.py  habit_service.py  progress_service.py  session_service.py
backend/app/utils/: websocket.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/api/: achievements.ts  auth.ts  client.ts  habits.ts  progress.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/achievements/: EvolutiveMedal.tsx  MedalCard.tsx
frontend/src/components/dashboard/: EvolutiveTree.tsx  LevelBadge.tsx  (+2 more)
frontend/src/hooks/: useAchievements.ts  useAnalytics.ts  useHabits.ts  useProgress.ts  useReminders.ts  useWebSocketSync.ts
frontend/src/i18n/: translations.ts
frontend/src/stores/: authStore.ts  i18nStore.ts  pomodoroStore.ts  themeStore.ts
frontend/src/types/: achievement.ts  habit.ts  progress.ts  user.ts
(+13 files in other folders)
